--- a/scss/font/font-size.scss
+++ b/scss/font/font-size.scss
@@ -1,9 +1,18 @@
-$max: ($font-size-max - $font-size-min) / $font-size-step;
-$min: $font-size-min;
+$max: $font-size-max / $font-size-step;
 $step: $font-size-step;
 $unit: $font-size-unit;
 
 @for $i from 0 through $max{
-  $num: $min + $i * $step;
+  $num: $i * $step;
   .fs-#{$num}{font-size: #{$num}#{$unit};}
+}
+
+// media query
+@each $key, $val in $media-query{
+  @media screen and (max-width: #{$val}px) {
+    @for $i from 0 through $max{
+      $num: $i * $step;
+      .#{$key}\:fs-#{$num}{font-size: #{$num}#{$unit};}
+    }
+  }
 }
