--- a/scss/layout/grid.scss
+++ b/scss/layout/grid.scss
@@ -1,5 +1,9 @@
 @import '../variable';
 
+$step: $grid-gap-step;
+$unit: $grid-gap-unit;
+$max: $grid-gap-max / $step;
+
 .row{display: grid;grid-auto-flow: row;}
 .col{display: grid;grid-auto-flow: column;}
 .irow{display: inline-grid;grid-auto-flow: row;}
@@ -24,15 +28,48 @@
   .cs-#{$n}{grid-column-start: $n;}
 }
 
-$step: $grid-gap-step;
-$unit: $grid-gap-unit;
-$max: $grid-gap-max / $step;
-
 @for $i from 0 through $max {
   $num: $i * $step;
   .gap-#{$i}{grid-gap: #{$num}#{$unit};gap: #{$num}#{$unit}}
   .gapr-#{$i}{grid-row-gap: #{$num}#{$unit};row-gap: #{$num}#{$unit}}
   .gapc-#{$i}{grid-column-gap: #{$num}#{$unit};column-gap: #{$num}#{$unit}}
+}
+
+// media query
+@each $key, $val in $media-query{
+  @media screen and (max-width: #{$val}px) {
+    // grid
+    .#{$key}\:row{display: grid;grid-auto-flow: row;}
+    .#{$key}\:col{display: grid;grid-auto-flow: column;}
+    .#{$key}\:irow{display: inline-grid;grid-auto-flow: row;}
+    .#{$key}\:icol{display: inline-grid;grid-auto-flow: column;}
+
+    .#{$key}\:ass{align-self: start;}
+    .#{$key}\:asc{align-self: center;}
+    .#{$key}\:ase{align-self: end;}
+
+    .#{$key}\:jss{justify-self: start;}
+    .#{$key}\:jsc{justify-self: center;}
+    .#{$key}\:jse{justify-self: end;}
+
+    @for $n from 1 through $grid-max {
+      .#{$key}\:rows-#{$n}{grid-template-rows: repeat(#{$n}, 1fr);}
+      .#{$key}\:cols-#{$n}{grid-template-columns: repeat(#{$n}, 1fr);}
+
+      .#{$key}\:row-#{$n}{grid-row: span #{$n};}
+      .#{$key}\:col-#{$n}{grid-column: span #{$n};}
+
+      .#{$key}\:rs-#{$n}{grid-row-start: $n;}
+      .#{$key}\:cs-#{$n}{grid-column-start: $n;}
+    }
+
+    @for $i from 0 through $max {
+      $num: $i * $step;
+      .#{$key}\:gap-#{$i}{grid-gap: #{$num}#{$unit};gap: #{$num}#{$unit}}
+      .#{$key}\:gapr-#{$i}{grid-row-gap: #{$num}#{$unit};row-gap: #{$num}#{$unit}}
+      .#{$key}\:gapc-#{$i}{grid-column-gap: #{$num}#{$unit};column-gap: #{$num}#{$unit}}
+    }
+  }
 }
 
 // $arr: ();
