--- a/scss/others/other.scss
+++ b/scss/others/other.scss
@@ -1,3 +1,11 @@
 .fit-cover{object-fit: cover;}
 .fit-contain{object-fit: contain;}
 .fit-fill{object-fit: fill;}
+
+@each $key, $val in $media-query{
+  @media screen and (max-width: #{$val}px) {
+    .#{$key}\:fit-cover{object-fit: cover;}
+    .#{$key}\:fit-contain{object-fit: contain;}
+    .#{$key}\:fit-fill{object-fit: fill;}
+  }
+}
