--- a/scss/position/position.scss
+++ b/scss/position/position.scss
@@ -1,6 +1,8 @@
 @import '../variable';
 
+$step: $position-step;
 $unit: $position-unit;
+$max: $position-max / $step;
 
 @for $i from 0 through 99 {
   $num: 100% * $i / 100;
@@ -9,11 +11,30 @@ $unit: $position-unit;
   .t-#{$i}\%{top: #{$num}}
   .b-#{$i}\%{bottom: #{$num}}
 }
-
-@for $i from 0 through $position-max {
-  $num: $i * $position-step;
+@for $i from 0 through $max {
+  $num: $i * $step;
   .l-#{$i}{left: #{$num}#{$unit}}
   .r-#{$i}{right: #{$num}#{$unit}}
   .t-#{$i}{top: #{$num}#{$unit}}
   .b-#{$i}{bottom: #{$num}#{$unit}}
+}
+
+// media query
+@each $key, $val in $media-query{
+  @media screen and (max-width: #{$val}px) {
+    @for $i from 0 through 99 {
+      $num: 100% * $i / 100;
+      .#{$key}\:l-#{$i}\%{left: #{$num}}
+      .#{$key}\:r-#{$i}\%{right: #{$num}}
+      .#{$key}\:t-#{$i}\%{top: #{$num}}
+      .#{$key}\:b-#{$i}\%{bottom: #{$num}}
+    }
+    @for $i from 0 through $max {
+      $num: $i * $step;
+      .#{$key}\:l-#{$i}{left: #{$num}#{$unit}}
+      .#{$key}\:r-#{$i}{right: #{$num}#{$unit}}
+      .#{$key}\:t-#{$i}{top: #{$num}#{$unit}}
+      .#{$key}\:b-#{$i}{bottom: #{$num}#{$unit}}
+    }
+  }
 }
