增加 ring 大小控制

--- a/scss/others/ring.scss
+++ b/scss/others/ring.scss
@@ -1,5 +1,13 @@
 @import '../variable';
 
+$unit: $ring-unit;
+$step: $ring-step;
+$max: $ring-max / $step;
+
 @each $key, $val in $colors{
-  .ring-#{$key}:focus{box-shadow: 0 0 0 3px transparentize($val, 0.7);}
+  .ring-#{$key}:focus{box-shadow: 0 0 0 2px transparentize($val, 0.7);}
+  @for $i from 0 through $max{
+    $num: $i * $step;
+    .ring-#{$key}-#{$i}:focus{box-shadow: 0 0 0 #{$num}px transparentize($val, 0.7);}
+  }
 }
