--- a/scss/font/font-size.scss
+++ b/scss/font/font-size.scss
@@ -1,6 +1,9 @@
-$max: $font-size-max / $font-size-step;
-$step: $font-size-step;
-$unit: $font-size-unit;
+@import '../variable';
+
+$map: $font-size;
+$step: map-get($map, step);
+$unit: map-get($map, unit);
+$max: map-get($map, max) / $step;
 
 @for $i from 0 through $max{
   $num: $i * $step;
