--- a/scss/variable.scss
+++ b/scss/variable.scss
@@ -1,86 +1,109 @@
-$width-height-max: 5;
-$width-height-step: 0.1;
-$width-height-unit: em;
-
-$position-max: 5;
-$position-step: 0.1;
-$position-unit: em;
-
-$margin-padding-max: 5;
-$margin-padding-step: 0.1;
-$margin-padding-unit: em;
-
-$border-width-max: 20;
-$border-width-step: 1;
-$border-width-unit: px;
-
-$font-size-max: 4;
-$font-size-step: 0.1;
-$font-size-unit: rem;
-
-$line-height-max: 4;
-$line-height-step: 0.1;
-$line-height-unit: em;
-
-$radius-max: 20;
-$radius-step: 0.1;
-$radius-unit: em;
-
-$flex-max: 20;
-$flex-step: 1;
-
-$grid-max: 20;
-$grid-step: 1;
-$grid-gap-max: 5;
-$grid-gap-step: 0.1;
-$grid-gap-unit: em;
-
-$during-max: 1000;
-$during-step: 100;
-$during-unit: ms;
-
-$opacity-step: 0.01;
-
-$z-index-max: 100;
-$z-index-step: 1;
-
-$ring-max: 10;
-$ring-step: 1;
-$ring-unit: px;
+$width-height: (
+  max: 5,
+  step: 0.1,
+  unit: em
+);
+$position: (
+  max: 5,
+  step: 0.1,
+  unit: em
+);
+$margin-padding: (
+  max: 5,
+  step: 0.1,
+  unit: em
+);
+$border-width: (
+  max: 20,
+  step: 1,
+  unit: px
+);
+$font-size: (
+  max: 4,
+  step: 0.1,
+  unit: rem
+);
+$line-height: (
+  max: 4,
+  step: 0.1,
+  unit: em
+);
+$radius: (
+  max: 20,
+  step: 0.1,
+  unit: em
+);
+$flex: (
+  max: 20,
+  step: 1
+);
+$grid: (
+  max: 20,
+  step: 1
+);
+$grid-gap: (
+  max: 5,
+  step: 0.1,
+  unit: em
+);
+$during: (
+  max: 1000,
+  step: 100,
+  unit: ms
+);
+$opacity: (
+  step: 0.01
+);
+$z-index: (
+  max: 100,
+  step: 1
+);
+$ring: (
+  max: 10,
+  step: 1,
+  unit: px
+);
 
 // 基础背景色
-$bg-base-light: #ffffff;
-$bg-base-dark: #0d1117;
-
+$bg-base-color: (
+  light: #ffffff,
+  dark: #0d1117
+);
 // 字体叠加色
-$text-light: #000000;
-$text-dark: #ffffff;
-$text-color-step: 0.01;
-
+$text-color: (
+  light: #000,
+  dark: #fff,
+  step: 0.01
+);
 // 背景叠加色
-$bg-light: #13161b;
-$bg-dark: #ffffff;
-$bg-color-step: 0.01;
-
+$bg-color: (
+  light: #13161b,
+  dark: #ffffff,
+  step: 0.01
+);
 // 边框叠加色
-$border-light: #13161b;
-$border-dark: #ffffff;
-$border-color-step: 0.01;
+$border-color: (
+  light: #13161b,
+  dark: #ffffff,
+  step: 0.01
+);
 
 // 此处的颜色并不会受黑色模式的影响
-$color-step: 0.01;
-$colors: (
-  white: #ffffff,
-  gray: #8d8d8d,
-  black: #000000,
-  blue: #1a6df1,
-  cyan: #19bedb,
-  green: #10ba75,
-  yellow: #e9ae0a,
-  orange: #e96913,
-  red: #e93232,
-  pink: #e72690,
-  purple: #ab44ef,
+$color: (
+  step: 0.01,
+  list: (
+    white: #ffffff,
+    gray: #8d8d8d,
+    black: #000000,
+    blue: #1a6df1,
+    cyan: #19bedb,
+    green: #10ba75,
+    yellow: #e9ae0a,
+    orange: #e96913,
+    red: #e93232,
+    pink: #e72690,
+    purple: #ab44ef,
+  )
 );
 
 $status: (
@@ -95,5 +118,14 @@ $media-query: (
   md: 992,
   sm: 768,
   xs: 576
+);
+
+$transition: (
+  c: color,
+  bg: background-color,
+  o: opacity,
+  bc: border-color,
+  shadow: box-shadow,
+  tsfm: transform
 );
 
