--- a/scss/background/color.scss
+++ b/scss/background/color.scss
@@ -16,7 +16,7 @@ $colors: map-get($color, list);
 
 
 @each $s, $str in $status {
-  .#{$s}\:bg-current:#{str}{background-color: currentColor;}
+  .#{$s}\:bg-current:#{$str}{background-color: currentColor;}
   @each $key, $val in $colors{
     .#{$s}\:bg-#{$key}:#{$str}{background-color: $val;}
     @for $i from 0 through $max{
